# LifePrism

./: .gitignore  .gitmodules  AsyncSqliteSaver_集成指南.md  CHATBOT_FLOWCHART.md  LAYOUT_FIX_EXPLANATION.md  LifeWatch-AI.spec  README.md  REPORT_SUMMARY_TOKENS_USAGE.md  api-null-handling-guide.md  api_analysis_report.md  build_installer.py  launch_lifewatch.py  mian.py  migration_output.txt  pyproject.toml  test.py  test_checkpoint_format.py  test_report_summary_tokens.py  前端需求.md  数据接口.md
.agent/rules/: browser-guide.md  langchain-guide.md  refactor-front-guide.md  server-guide.md
lifeprism/config/: database.py  settings_manager.py
lifeprism/llm/: __init__.py
lifeprism/processors/: README.md  __init__.py  data_clean.py
lifeprism/server/: __init__.py  main.py
lifeprism/storage/: __init__.py  database_manager.py  lw_table_manager.py
lifeprism/updater/: __init__.py  update_checker.py
lifeprism/utils/: __init__.py  common_utils.py
lifewatch/config/: __init__.py  crawler.py  database.py  settings.py  settings.yaml  settings_manager.py
lifewatch/crawler/: __init__.py  api_crawler.py  app_description_fetching copy.py  app_description_fetching.py  app_description_processor.py  brower_crawler.py  test.py
lifewatch/data/: __init__.py  aw_data_reader.py  aw_db_reader.py  data_clean.py  get_activitywatch_data.py  init_categories.py  lw_data_writer.py
lifewatch/llm/: __init__.py  base_classifier.py  cloud_classifier.py  llm_classify copy.py  ollama_classifier.py  ollama_client.py  remote_client.py  test_classify_workflow.py  (+1 more)
tests/: test_category_state_sync.py
(+283 files in other folders)
