# pyproject.toml - LifeWatch-AI 项目配置

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lifewatch"
version = "0.1.0"
description = "AI-powered software monitoring and classification system"
requires-python = ">=3.8"

# 项目依赖
dependencies = [
    "requests>=2.25.0",
    "DrissionPage>=4.0.0",
    "duckduckgo-search>=3.0.0",
    # LangGraph 会话持久化依赖
    "langgraph>=1.0.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "aiosqlite==0.21.0",  # 注意：0.22.x 与 langgraph-checkpoint-sqlite 不兼容
]

# 可选依赖
[project.optional-dependencies]
dev = [
    "pytest>=6.0",
]
[tool.setuptools]
packages = ["lifewatch"]